fixed spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,5 +148,23 @@ section {
     width: 80%;
   }
 
-  
+  .gallery{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(5, 10vw);
+    grid-gap: 15px;
+    margin-left: 30px;
+  }
 
+  .gallery__item{
+      position: relative;
+  }
+
+  .gallery__img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border: solid 1px var(--primary-color)
+  }
+
+  
